; ModuleID = '/home/carl/AnghaBench/git/extr_http.c_release_active_slot.c'
source_filename = "/home/carl/AnghaBench/git/extr_http.c_release_active_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.active_request_slot = type { i32* }

@curl_session_count = common dso_local global i64 0, align 8
@min_curl_sessions = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.active_request_slot*)* @release_active_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_active_slot(%struct.active_request_slot* %0) #0 {
  %2 = alloca %struct.active_request_slot*, align 8
  store %struct.active_request_slot* %0, %struct.active_request_slot** %2, align 8
  %3 = load %struct.active_request_slot*, %struct.active_request_slot** %2, align 8
  %4 = call i32 @closedown_active_slot(%struct.active_request_slot* %3)
  %5 = load %struct.active_request_slot*, %struct.active_request_slot** %2, align 8
  %6 = getelementptr inbounds %struct.active_request_slot, %struct.active_request_slot* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %25

9:                                                ; preds = %1
  %10 = load %struct.active_request_slot*, %struct.active_request_slot** %2, align 8
  %11 = call i32 @xmulti_remove_handle(%struct.active_request_slot* %10)
  %12 = load i64, i64* @curl_session_count, align 8
  %13 = load i64, i64* @min_curl_sessions, align 8
  %14 = icmp sgt i64 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %9
  %16 = load %struct.active_request_slot*, %struct.active_request_slot** %2, align 8
  %17 = getelementptr inbounds %struct.active_request_slot, %struct.active_request_slot* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @curl_easy_cleanup(i32* %18)
  %20 = load %struct.active_request_slot*, %struct.active_request_slot** %2, align 8
  %21 = getelementptr inbounds %struct.active_request_slot, %struct.active_request_slot* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  %22 = load i64, i64* @curl_session_count, align 8
  %23 = add nsw i64 %22, -1
  store i64 %23, i64* @curl_session_count, align 8
  br label %24

24:                                               ; preds = %15, %9
  br label %25

25:                                               ; preds = %24, %1
  ret void
}

declare dso_local i32 @closedown_active_slot(%struct.active_request_slot*) #1

declare dso_local i32 @xmulti_remove_handle(%struct.active_request_slot*) #1

declare dso_local i32 @curl_easy_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
